--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -87,10 +87,9 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "abhishek@gmail.com"
-        git config --global user.name "Abhishek Veeramalla"
+        git config --global user.email "uttamkumar631065@gmail.com"
+        git config --global user.name "uttam kumar"
         git add helm/go-web-app-chart/values.yaml
         git commit -m "Update tag in Helm chart"
         git push
-
 
